--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-image": "^5.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-strip-comments": "^2.6.0",
+    "gulp-strip-css-comments": "^3.0.0",
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.3",
+    "gulp-htmlmin": "^5.0.1",
     "jquery": "^3.7.1"
   }
 }
